# WikiVisage

./: .gitignore  AGENTS.md  Aptfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Procfile  README.md  SECURITY.md  app.py  babel.cfg  database.py  how-to-run-it.md  jobs.yaml  messages.pot  migrate.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  test-local.md  whitelist.txt  worker.py
.github/workflows/: ci.yml  deploy.yml
static/: manifest.json  sw.js
templates/: base.html  classify.html  dashboard.html  error.html  index.html  leaderboard.html  project_detail.html  project_new.html  project_settings.html
tests/: conftest.py  test_app.py  test_app_chunk1.py  test_app_chunk2.py  test_app_chunk3.py  test_app_chunk4.py  test_app_chunk5.py  test_app_chunk6.py  test_database.py  test_migrate.py  test_worker.py
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/es/LC_MESSAGES/: messages.mo  messages.po
translations/fr/LC_MESSAGES/: messages.mo  messages.po
translations/nb/LC_MESSAGES/: messages.mo  messages.po
